@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.654 2005-03-26 21:10:51 castaglia Exp $
+$Id: NEWS,v 1.655 2005-04-04 20:40:59 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -125,6 +125,7 @@ $Id: NEWS,v 1.654 2005-03-26 21:10:51 castaglia Exp $
 - Bug 2551 - Recursive LIST with symlinked directories gives duplicate results.
 - Bug 2576 - PWD command does not handle " character properly.
 - Bug 2493 - mod_tls should support CCC command.
+- Bug 2580 - ProFTPD on Tru64 with SIA allows login with blank password.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
